fix: Fixed dark mode and mobile style

--- a/styles/features.css
+++ b/styles/features.css
@@ -178,7 +178,7 @@
     height: 2035.68px;
   }
 
-  #features-title-container h4 {
+  #features-title-container-h4 {
     width: 335px;
     height: 32px;
 
